tests/paczka1/fuzzy1/49242608.err
Error in line 24: rTyBsLPu A722 4,3
Error in line 28: gmAQkuy0y6 A66 42,9
Error in line 27: S832 S76 32,5
Error in line 22: KrT A66 34,4
